Revision history for Perl extension Fuse.

0.01  Wed Nov 28 21:45:20 2001
	- original version; created by h2xs 1.21 with options
		include/fuse.h

0.02 Sun Dec 2 18:59:56 2001
    - works well enough to release, but still needs testing

0.03 Wed Dec 5 02:17:52 2001
    - changed getattr() to smell like perl's stat()
	- fleshed out the documentation a bit

0.04 Thu Nov 18 13:51:56 CET 2004
    - new maintainer, Dobrica Pavlinusic <dpavlin@rot13.org>
    - updated to work with current CVS version of fuse

0.06 Sun Apr 03 16:15:00 BST 2005
    - Add support for operations supported by FUSE 2.2.1
      (flush, release, fsync, extended attributes)
    - add mount options

0.07 Sun Dec 25 10:37:00 PST 2005
    - Remove the FUSE_DEBUG constant; we never actually implemented
      it to begin with.
    - "make test" now uses the version of Fuse you've just built,
      not the one installed in /usr/lib/perl5.
    - getattr test now allows blksize to vary between host and fuse
      fs, as this is not a bug.
    - Add experimental support for threading.  The following minor
      API changes accommodate this:
    - The nonexistent (yet documented) "unthreaded=>1" attribute
      has been replaced with the "threaded=>1" attribute, and this
      time it actually exists.
    - Symbolic refs like "main::e_getattr" are now allowed for
      callbacks, because threaded mode needs to share() the
      callbacks, yet perl 5.8.7 does not allow share()ing code
      refs yet.  Direct code-refs are still supported as much
      as possible (currently, non-threaded mode).
    - testsuite uses a multithreaded loopback.pl, when available.
    - Update docs accordingly.  Update examples accordingly.