@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Fuse
-version:      0.07_2
+version:      0.07_3
 version_from: Fuse.pm
 installdirs:  site
 requires:
